completed a footer section

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
         <section class="container mx-auto mt-32">
             <div class="text-center">
                 <h3 class="text-[#131318] text-4xl font-extrabold mb-6">Clients Question</h3>
-                <p class="text-[#13131899] mb-20 lg:w-[600px] lg:mx-auto">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+                <p class="text-[#13131899] mb-20 lg:w-[600px] lg:mx-auto">The National Hockey League and the National Hockey League Players' Association operates under a Collective Bargaining Agreement, augmented with a Memorandum of Understanding.</p>
             </div>
           <div class="grid lg:grid-cols-2">
             <div>
@@ -518,41 +518,43 @@
     </main>
     <!-- footer section start -->
     <footer class="footer p-10 mt-24 bg-[#131318] text-base-content">
-        <div>
-            <h3 class="text-[#FFF] text-3xl font-extrabold">Get In Touch</h3>
-            <p class="lg:w-[340px] text-[#ffffff99] font-medium">A player can bat the puck down with a hand, but cannot close a hand on the puck. The puck should land on the same player’s stick.</p>
-            <div class="flex justify-center items-center gap-3">
+        <div class="mx-auto">
+            <h3 class="text-[#FFF] text-3xl font-extrabold lg:mx-0 mx-auto">Get In Touch</h3>
+            <p class="lg:w-[340px] text-[#ffffff99] font-medium lg:mx-0 mx-auto">A player can bat the puck down with a hand, but cannot close a hand on the puck. The puck should land on the same player’s stick.</p>
+            <div class="flex justify-center items-center gap-3 lg:mx-0 mx-auto">
                 <i class="fa-regular fa-envelope text-[#FF4240]"></i>
                 <p class="text-[#ffffffcc] font-medium">hockeys@support.com</p>
             </div>
-            <div class="flex justify-center items-center gap-3">
+            <div class="flex justify-center items-center gap-3 lg:mx-0 mx-auto">
                 <i class="fa-solid fa-phone text-[#FF4240]"></i>
                 <p class="text-[#ffffffcc] font-medium">(+62) 123-321-543</p>
             </div>
         </div>
-            <nav>
-                <header class="footer-title text-[#FFF] text-[18px] font-bold">Company</header> 
-                <a class="link link-hover text-[#ffffff99]">About us</a>
-                <a class="link link-hover text-[#ffffff99]">Leadership</a>
-                <a class="link link-hover text-[#ffffff99]">Careers</a>
-                <a class="link link-hover text-[#ffffff99]">News & Article</a>
-                <a class="link link-hover text-[#ffffff99]">Legal Notice</a>
-              </nav>
-            <nav>
-                <header class="footer-title text-[#FFF] text-[18px] font-bold">Support</header> 
-                <a class="link link-hover text-[#ffffff99]">Help Center</a>
-                <a class="link link-hover text-[#ffffff99]">FAQ</a>
-                <a class="link link-hover text-[#ffffff99]">Ticket Support</a>
-                <a class="link link-hover text-[#ffffff99]">Contact Us</a>
-                </nav>
-            <nav>
-                <header class="footer-title text-[#FFF] text-[18px] font-bold">Services</header> 
-                <a class="link link-hover text-[#ffffff99]">Academy</a>
-                <a class="link link-hover text-[#ffffff99]">Group Lesson</a>
-                <a class="link link-hover text-[#ffffff99]">Private Lesson</a>
-                <a class="link link-hover text-[#ffffff99]">Hockeys for kids</a>
-                <a class="link link-hover text-[#ffffff99]">Hockeys for Adult</a>
-              </nav>
+           <div class="grid grid-cols-2 lg:mx-0 mx-auto lg:gap-44 gap-12">
+            <div class="grid grid-cols-1 gap-3">
+                    <h1 class="text-[#FFF] text-[18px] font-bold lg:mx-0 mx-auto">Company</h1> 
+                    <a class=" text-[#ffffff99] lg:mx-0 mx-auto">About us</a>
+                    <a class=" text-[#ffffff99] lg:mx-0 mx-auto">Leadership</a>
+                    <a class=" text-[#ffffff99] lg:mx-0 mx-auto">Careers</a>
+                    <a class=" text-[#ffffff99] lg:mx-0 mx-auto">News & Article</a>
+                    <a class=" text-[#ffffff99] lg:mx-0 mx-auto">Legal Notice</a>
+            </div>
+                <div class="grid grid-cols-1 gap-3">
+                        <h1 class="text-[#FFF] text-[18px] font-bold lg:mx-0 mx-auto">Support</h1> 
+                        <a class=" text-[#ffffff99] lg:mx-0 mx-auto">Help Center</a>
+                        <a class=" text-[#ffffff99] lg:mx-0 mx-auto">Contact Us</a>
+                        <a class=" text-[#ffffff99] lg:mx-0 mx-auto">FAQ</a>
+                        <a class=" text-[#ffffff99] lg:mx-0 mx-auto">Ticket Support</a>
+                </div>
+           </div>
+                <div class="mx-auto">
+                        <h1 class="text-[#FFF] text-[18px] font-bold lg:mx-0 mx-auto">Services</h1> 
+                        <a class=" text-[#ffffff99] lg:mx-0 mx-auto">Academy</a>
+                        <a class=" text-[#ffffff99] lg:mx-0 mx-auto">Group Lesson</a>
+                        <a class=" text-[#ffffff99] lg:mx-0 mx-auto">Private Lesson</a>
+                        <a class=" text-[#ffffff99] lg:mx-0 mx-auto">Hockeys for kids</a>
+                        <a class=" text-[#ffffff99] lg:mx-0 mx-auto">Hockeys for Adult</a>
+                </div>
       </footer>
 </body>
 </html>
