--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <div class="carousel w-full">
             <div id="slide1" class="carousel-item relative w-full">
                 <img src="Images/1.png" class="w-full bg-cover bg-center" />
+                
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide4" class="btn btn-circle">❮</a> 
                 <a href="#slide2" class="btn btn-circle">❯</a>
@@ -94,7 +95,7 @@
         <section class="container mx-auto mt-16 lg:mt-32">
             <div class="text-center space-y-4 lg:space-y-6">
                 <h1 class="text-[#131318] text-2xl lg:text-4xl font-extrabold">Professional Hockeys Club</h1>
-                <p class="text-[#13131899] font-medium lg:w-[600px] lg:mx-auto">Club hockey is a beloved sport that has grown in popularity among college students over the years.</p>
+                <p class="text-[#13131899] font-medium lg:w-[600px] lg:mx-auto mx-3">Club hockey is a beloved sport that has grown in popularity among college students over the years.</p>
             </div>
             <div class="grid grid-cols-1 lg:grid-cols-4 mt-10">
                 <div class="text-center mt-12">
@@ -103,7 +104,7 @@
                         </div>
                         <div>
                             <h1 class="text-xl font-semibold text-[#131318] mb-3 mt-5">Prayer Facility</h1>
-                        <p class="text-[#13131899]">Our hockey programs are for all players, including goalies, forwards defensemen</p>
+                        <p class="text-[#13131899] mx-3">Our hockey programs are for all players, including goalies, forwards defensemen</p>
                         </div>
                        </div>
                        <div class="text-center mt-12">
@@ -121,7 +122,7 @@
                                 </div>
                                 <div>
                                     <h1 class="text-xl font-semibold text-[#131318] mb-3 mt-5">Senior Player</h1>
-                                <p class="text-[#13131899]">Senior hockey refers to amateur or semi-professional hockey competition. </p>
+                                <p class="text-[#13131899] mx-3">Senior hockey refers to amateur or semi-professional hockey competition. </p>
                                 </div>
                                </div>
                    <div class="text-center mt-12">
@@ -130,7 +131,7 @@
                         </div>
                         <div>
                             <h1 class="text-xl font-semibold text-[#131318] mb-3 mt-5">Training Ground</h1>
-                        <p class="text-[#13131899]">The Burnsville Training Center is located across the parking from the Burnsville.</p>
+                        <p class="text-[#13131899] mx-3">The Burnsville Training Center is located across the parking from the Burnsville.</p>
                         </div>
                        </div>
                    </div>
@@ -140,7 +141,7 @@
         <section class="container mx-auto mt-24">
             <div class="text-center space-y-6">
                 <h1 class="text-4xl font-extrabold">Program Sections</h1>
-                <p class="text-[#13131899] lg:w-[600px] lg:mx-auto">
+                <p class="text-[#13131899] lg:w-[600px] lg:mx-auto mx-3">
                     Welcome to Hockey Canada Programs. Here you will find alternatives on how you can get involved in hockey. </p>
             </div>
             <div class="grid grid-cols-1 lg:grid-cols-2 lg:gap-6 gap-4 mt-20">
@@ -173,7 +174,7 @@
         <section class="container mx-auto mt-40">
             <div class="text-center">
                 <h1 class="text-4xl font-extrabold text-[#131318] mb-6">Our New Products</h1>
-            <p class="font-medium text-[#13131899] mb-20 lg:w-[600px] lg:mx-auto"> hockey player needs Every sportsman has their way to perfecting their craft.You will always need a specialized bag for all your equipment.</p>
+            <p class="font-medium text-[#13131899] mb-20 lg:w-[600px] lg:mx-auto mx-3"> hockey player needs Every sportsman has their way to perfecting their craft.You will always need a specialized bag for all your equipment.</p>
             </div>
            <div class="grid lg:grid-cols-2 gap-4">
             
@@ -388,7 +389,7 @@
         <section class="container mx-auto mt-32">
             <div class="text-center">
                 <h3 class="text-[#131318] text-4xl font-extrabold mb-6">Clients Question</h3>
-                <p class="text-[#13131899] mb-20 lg:w-[600px] lg:mx-auto">The National Hockey League and the National Hockey League Players' Association operates under a Collective Bargaining Agreement, augmented with a Memorandum of Understanding.</p>
+                <p class="text-[#13131899] mb-20 lg:w-[600px] lg:mx-auto mx-3">The National Hockey League and the National Hockey League Players' Association operates under a Collective Bargaining Agreement, augmented with a Memorandum of Understanding.</p>
             </div>
           <div class="grid lg:grid-cols-2">
             <div>
@@ -456,7 +457,7 @@
         <section class="container mx-auto mt-10">
             <div class="text-center">
                 <h1 class="mb-6 text-4xl font-extrabold text-[#131318]">Get In Touch</h1>
-                <p class="font-medium text-[#13131899] mb-20 lg:w-[600px] lg:mx-auto">A player can bat the puck down with a hand, but cannot close a hand on the puck. The puck should land on the same player’s stick.</p>
+                <p class="font-medium text-[#13131899] mb-20 lg:w-[600px] lg:mx-auto mx-3">A player can bat the puck down with a hand, but cannot close a hand on the puck. The puck should land on the same player’s stick.</p>
             </div>
             <div class="grid grid-cols-1 lg:grid-cols-3 gap-5">
                 <div class="">
