updated propessional section

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             </div>
                             <div>
                                 <h1 class="text-xl font-semibold text-[#131318] mb-3 mt-5">Experienced Coach</h1>
-                            <p class="text-[#13131899]">Roger grew up playing youth hockey in Massachusetts followed hockey.</p>
+                            <p class="text-[#13131899] mx-3">Roger grew up playing youth hockey in Massachusetts followed hockey.</p>
                             </div>
                            </div>
                            <div class="text-center mt-12">
